[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/microphone.png" type="Texture" id=2]
[ext_resource path="res://assets/speaker.png" type="Texture" id=3]

[sub_resource type="AudioStreamMicrophone" id=1]

[sub_resource type="Animation" id=2]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AboutPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AboutPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AboutPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AboutPanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Main" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 4
script = ExtResource( 1 )

[node name="Params" type="VBoxContainer" parent="Main"]
margin_right = 250.0
margin_bottom = 356.0
rect_min_size = Vector2( 250, 0 )

[node name="TitleLabel" type="Label" parent="Main/Params"]
margin_right = 250.0
margin_bottom = 14.0
text = "Params"
align = 1

[node name="Container" type="GridContainer" parent="Main/Params"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 54.0
columns = 3

[node name="ThresholdLabel" type="Label" parent="Main/Params/Container"]
margin_top = 1.0
margin_right = 71.0
margin_bottom = 15.0
text = "Threshold: "

[node name="ThresholdSlider" type="HSlider" parent="Main/Params/Container"]
margin_left = 75.0
margin_right = 214.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.05

[node name="ThresholdValue" type="Label" parent="Main/Params/Container"]
margin_left = 218.0
margin_top = 1.0
margin_right = 250.0
margin_bottom = 15.0
rect_min_size = Vector2( 32, 0 )
text = "0.05"

[node name="DelayLabel" type="Label" parent="Main/Params/Container"]
margin_top = 21.0
margin_right = 71.0
margin_bottom = 35.0
text = "Delay: "

[node name="DelaySlider" type="HSlider" parent="Main/Params/Container"]
margin_left = 75.0
margin_top = 20.0
margin_right = 214.0
margin_bottom = 36.0
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.5

[node name="DelayValue" type="Label" parent="Main/Params/Container"]
margin_left = 218.0
margin_top = 21.0
margin_right = 250.0
margin_bottom = 35.0
text = "0.5"

[node name="Separator" type="ColorRect" parent="Main"]
margin_left = 254.0
margin_right = 255.0
margin_bottom = 356.0
rect_min_size = Vector2( 1, 1 )

[node name="MicrophoneIcon" type="TextureRect" parent="Main"]
margin_left = 259.0
margin_right = 448.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="SpeakerIcon" type="TextureRect" parent="Main"]
margin_left = 452.0
margin_right = 640.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="AudioOut" type="AudioStreamPlayer" parent="Main"]
bus = "Out"

[node name="AudioIn" type="AudioStreamPlayer" parent="Main"]
stream = SubResource( 1 )
autoplay = true
bus = "In"

[node name="StopRecordingTimer" type="Timer" parent="Main"]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="ConfigSaveBounceTimer" type="Timer" parent="Main"]
wait_time = 2.0
one_shot = true

[node name="AboutButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_bottom = -5.0
grow_vertical = 0
text = "About"

[node name="AboutPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="AboutPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="AboutPanel/VBoxContainer"]
margin_right = 640.0
margin_bottom = 336.0
size_flags_vertical = 3

[node name="About" type="RichTextLabel" parent="AboutPanel/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
bbcode_enabled = true
bbcode_text = "[b]About AudioRepeater[/b]

Author: Janosch Lion
Version: AudioRepeater v1.0
Repository: [url]https://github.com/Janorico/AudioRepeater[/url]
Website: [url]https://janorico.github.io[/url]
Email: [url=mailto:janorico@posteo.de]janorico@posteo.de[/url]"
text = "About AudioRepeater

Author: Janosch Lion
Version: AudioRepeater v1.0
Repository: https://github.com/Janorico/AudioRepeater
Website: https://janorico.github.io
Email: janorico@posteo.de"

[node name="Sources" type="RichTextLabel" parent="AboutPanel/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
bbcode_enabled = true
bbcode_text = "[b]AudioRepeater Sources[/b]

* [url=https://iconduck.com/icons/68292/speaker]Speaker[/url] icon by [url=https://iconduck.com]Iconduck[/url]
* [url=https://iconduck.com/icons/22173/microphone]Microphone[/url] icon by [url=https://iconduck.com]Iconduck[/url]
* [url=https://iconduck.com/icons/182440/repeat]Repeat[/url] icon by [url=https://iconduck.com]Iconduck[/url]"
text = "AudioRepeater Sources

* Speaker icon by Iconduck
* Microphone icon by Iconduck
* Repeat icon by Iconduck"

[node name="Copyright" type="CenterContainer" parent="AboutPanel/VBoxContainer/TabContainer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="AboutPanel/VBoxContainer/TabContainer/Copyright"]
margin_right = 446.0
margin_bottom = 252.0
text = "AudioRepeater records audio and repeats it. Have fun!
Copyright (C) 2023 Janosch Lion

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>."

[node name="Button" type="Button" parent="AboutPanel/VBoxContainer"]
margin_top = 340.0
margin_right = 640.0
margin_bottom = 360.0
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AboutPanel"]
root_node = NodePath("../..")
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )

[connection signal="value_changed" from="Main/Params/Container/ThresholdSlider" to="Main" method="_on_threshold_slider_value_changed"]
[connection signal="value_changed" from="Main/Params/Container/DelaySlider" to="Main" method="_on_delay_slider_value_changed"]
[connection signal="timeout" from="Main/StopRecordingTimer" to="Main" method="_on_stop_recording_timer_timeout"]
[connection signal="timeout" from="Main/ConfigSaveBounceTimer" to="Main" method="_save_config"]
[connection signal="pressed" from="AboutButton" to="AboutPanel/AnimationPlayer" method="play" binds= [ "show" ]]
[connection signal="meta_clicked" from="AboutPanel/VBoxContainer/TabContainer/About" to="Main" method="_on_rich_text_meta_clicked"]
[connection signal="meta_clicked" from="AboutPanel/VBoxContainer/TabContainer/Sources" to="Main" method="_on_rich_text_meta_clicked"]
[connection signal="pressed" from="AboutPanel/VBoxContainer/Button" to="AboutPanel/AnimationPlayer" method="play" binds= [ "hide" ]]
